# rust-app-test

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: api.md  cargo_commands.md  sea_orm_best_practices.md
migration/: Cargo.toml
migration/src/: lib.rs  m20260118_203936_products_and_categories.rs
migrations/: 20260117000001_create_categories_table.sql  20260117000001_products_and_categories.sql  20260117000002_create_products_table.sql
plans/: entity_refactoring_plan.md  implementation_templates.md  product_catalog_api_plan.md  rust_decimal_to_bigdecimal_migration_plan.md  sea_orm_migration_plan.md
src/: api.rs  config.rs  database.rs  db.rs  entity.rs  error.rs  lib.rs  main.rs  migration.rs  validation.rs
src/api/: category.rs  mod.rs  product.rs
src/entity/: categories.rs  category.rs  mod.rs  prelude.rs  product.rs  product_categories.rs  product_category.rs  products.rs
src/models/: category.rs  mod.rs  product.rs
src/repository/: category.rs  mod.rs  product.rs
src/tests/: category_api_test.rs  common.rs  mod.rs  product_api_test.rs
src/validation/: mod.rs  product.rs
tests/: category_api_test.rs  product_api_test.rs
tests/common/: mod.rs
