[package]
name = "product-catalog-api"
version = "0.1.0"
edition = "2021"
authors = ["Tommy Bozeman <tboz203@gmail.com>"]
description = "A RESTful API for managing product catalog data"

[dependencies]
# Web framework
axum = "0"
tower = "0"
tower-http = { version = "0", features = ["trace", "cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sea-orm = { version = "0.12", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
    "with-bigdecimal",
    "postgres-array",
] }
sea-orm-migration = "0.12"

# Error handling
anyhow = "1"
thiserror = "1"

# Serialization/deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0", features = ["derive"] }

# Utilities
chrono = { version = "0", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# Configuration
config = "0"
dotenv = "0"

# Logging
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "json"] }

[dev-dependencies]
reqwest = { version = "0", features = ["json"] }
mockall = "0"
tokio-test = "0"
sqlx-cli = { version = "0", features = ["postgres"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
