[package]
name = "product-catalog-api"
version = "0.1.0"
edition = "2024"
authors = ["Tommy Bozeman <tboz203@gmail.com>"]
description = "A RESTful API for managing product catalog data"

[workspace]
members = [".", "migration"]

[dependencies]
# Web framework
axum = "0.6.18"  # Using a version compatible with tower::ServiceExt
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
hyper = { version = "0.14.27", features = ["full"] }

# Async runtime
tokio = { version = "1.49.0", features = ["full"] }

# Database
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-bigdecimal",
] }
sea-orm-migration = "1.1.19"
bigdecimal = { version = "0.4.10", features = ["serde"] }

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.18"

# Serialization/deserialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Validation
validator = { version = "0.18.1", features = ["derive"] }

# Utilities
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

# Configuration
config = "0.15.19"
dotenvy = "0.15.7"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
reqwest = { version = "0.13.1", features = ["json"] }
mockall = "0.14.0"
tokio-test = "0.4.5"
hyper = { version = "0.14.32", features = ["full"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
